# synk

./: Cargo.toml  config.toml
crates/core/: Cargo.toml
crates/core/src/: commands.rs  document.rs  lib.rs  treesitter.rs
crates/core/src/default_themes/: catppuccin.rs
crates/core/src/highlighter/: languages.rs  mod.rs  theme.rs
crates/core/src/treesitter/: mod.rs
crates/synk/: Cargo.toml
crates/synk-core/src/: lib.rs
crates/synk-dev/: Cargo.toml
crates/synk-gui/: Cargo.toml
crates/synk/src/: main.rs
crates/ui/: Cargo.toml
crates/ui/src/: colors.rs  lib.rs  separator.rs  theme.rs
crates/ui/src/editor/: document.rs  dom.rs  gutter.rs  mod.rs
crates/ui/src/sidebar/: mod.rs
crates/ui/src/statusbar/: mod.rs
crates/ui/src/tab_bar/: mod.rs
resources/syntaxes/: rust.scm
src/: main.rs
synk/: Cargo.toml
synk-core/: Cargo.toml
synk-core/src/: lib.rs
synk-gui/: Cargo.toml
synk-gui/src/: lib.rs
synk-gui/src/components/: editor.rs  mod.rs  sidebar.rs
synk-gui/src/components/editor/: mod.rs
synk/src/: main.rs
