workspace = { members = ["crates/core", "crates/ui"] }

[package]
name = "synk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ui = { path = "crates/ui" }
core = { path = "crates/core" }
anyhow = "1.0.79"
eframe = { version = "0.25.0", default-features = false, features = [
	"glow",
	"default_fonts",
	"wayland",
] }
egui = "0.25.0"
