workspace = { members = ["crates/core", "crates/ui"] }

[package]
name = "synk"
version = "0.1.0"
edition = "2021"

[features]
wayland = []
x11 = []

[dependencies]
ui = { path = "crates/ui" }
core = { path = "crates/core" }
anyhow = "1.0.79"
freya = { git = "https://github.com/marc2332/freya", branch = "feat/mutable-font-collection-on-use-canvas" }
dioxus = { git = "https://github.com/dioxuslabs/dioxus", branch = "master", features = [
	"macro",
	"hooks",
], default-features = false }
winit = "0.29.10"
