[package]
name = "synk-gui"
version = "0.1.0"
edition = "2021"

[dependencies]
synk-core = { path = "../synk-core" }
iced = { version = "0.12", git = "https://github.com/synkdev/iced/", features = [
    "lazy",
    "debug",
] }
iced_aw = { version = "*", git = "https://github.com/synkdev/iced_aw/", features = [
    "split",
] }
