[package]
name = "synk"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "synk"
path = "src/main.rs"

[dependencies]
synk-gui = { path = "../synk-gui" }
synk-core = { path = "../synk-core" }
iced = { version = "0.12", git = "https://github.com/synkdev/iced/", features = [
    "lazy",
    "debug",
] }
anyhow = "1.0.75"
lazy_static = "1.4.0"
parking_lot = "0.12.1"
