[package]
name = "synk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.4", features = ["macro", "hooks"], default-features = false }
freya = "0.1.8"
# synk-gui = {path = "../synk-gui/"}
